# Lottery_Demo

./: .gitignore  CMakeLists.txt  Lottery.cpp  Lottery.h  People.cpp  People.h  README.md  Staff.cpp  Staff.h  a.out  lottery.cpp  lottery.h  main.cpp  test.cpp  unittest.cpp
include/: Lottery.h
src/: CMakeLists.txt  Lottery.cpp  Staff.cpp  main.cpp
unittest/: CMakeLists.txt  unittest.cpp
